--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
-.App {
+.card-containder {
     display: flex;
-    align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    margin-top: 8rem;
 }
