--- a/src/ui/Card/Card.css
+++ b/src/ui/Card/Card.css
@@ -5,7 +5,6 @@
     -webkit-box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.45); 
     box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.45);
     /* font-family: 'Jaldi', sans-serif; */
-    font-family: 'Poppins', sans-serif;
     padding: 1rem;
     line-height: 1.4rem;
     font-size: 1rem;
@@ -18,10 +17,24 @@
     user-select: none;
 }
 
-.card.flip {
-
-}
-
+.card[data-wobble='1'] {
+    animation: wobble 1s 1;
+  }
+  
+  @keyframes wobble {
+    25% {
+      transform: rotate(7.5deg);
+    }
+    50% {
+      transform: rotate(-15deg);
+    }
+    75% {
+      transform: rotate(2.5deg);
+    }
+    100% {
+      transform: rotate(0deg);
+    }
+  }
 .card:hover {
     -webkit-box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.45); 
     box-shadow: 0px 0px 20px 5px rgba(0,0,0,0.45);
@@ -40,10 +53,11 @@
     font-size: 1.2rem;
     line-height: 1.65rem;
     font-weight: 600;
+    text-align: center;
 }
 
 .card .card-bonus .card-bonus-text {
     text-align: center;
-    margin: .5rem 1rem;
-    font-size: .75rem;
+    margin: .5rem .75rem;
+    font-size: .5rem;
 }
