--- a/src/ui/Card/Card.css
+++ b/src/ui/Card/Card.css
@@ -49,7 +49,7 @@
 }
 
 .card .card-text {
-    margin-top: .5rem;
+    margin-top: 1rem;
     font-size: 1.2rem;
     line-height: 1.65rem;
     font-weight: 600;
