--- a/src/ui/Card/Types/BonusCard.css
+++ b/src/ui/Card/Types/BonusCard.css
@@ -10,3 +10,8 @@
      text-align:  center;
      margin-top: 2rem;
  }
+
+ .card-dark {
+     background-color: black;
+     color: white !important;
+ }
