--- a/src/ui/Card/Card.css
+++ b/src/ui/Card/Card.css
@@ -15,6 +15,7 @@
     transition: all .5s ease-in-out;
     cursor: pointer;
     user-select: none;
+    background-color: #fff;
 }
 
 .card[data-wobble='1'] {
