--- a/src/ui/CardLibrary/CardLibrary.css
+++ b/src/ui/CardLibrary/CardLibrary.css
@@ -1,6 +1,12 @@
-.card-libray-help {
+.card-library-help {
     text-align: center;
     margin-top: 2rem;
     font-size: 1.2rem;
     transform-origin: bottom;
+}
+
+.card-wrapper {
+    width: 63mm;
+    height: 88mm;
+    position: relative;
 }
