--- a/src/Game.css
+++ b/src/Game.css
@@ -7,4 +7,11 @@
 .menu-item {
     padding-left: 1rem;
     padding-right: 1rem;
+    text-transform: uppercase;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+
+.menu-item:last-child {
+    padding-right: 0rem;
 }
