--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,14 @@ a {
     text-decoration: none;
     color: black;
 }
+
+@media only screen and (max-width: 500px) {
+    .hide-on-sm {
+        display: none;
+    }
+  }
+@media only screen and (max-width: 700px) {
+    .hide-on-md {
+      display: none;
+    }
+  }
